--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="https://use.typekit.net/okr8ven.css">
     <meta charset="utf-8" />
     <meta
       http-equiv="Content-Security-Policy"
