oneclick install map from bsv now work

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -7,6 +7,11 @@
     font-family: acumin-pro, sans-serif;
   }
 
+  html, body{
+    margin: 0; padding: 0;
+    box-sizing: border-box;
+  }
+
   html.dark{
     background-color: #202225;
   }
