[bugfix-289] Add title in index.ejs to prevent the window title to be wiped magically

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>BSManager</title>
     <link rel="stylesheet" href="https://use.typekit.net/okr8ven.css">
     <meta charset="utf-8" />
     <meta
