--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -79,21 +79,21 @@
 }
 
 .tippy-box[data-theme~='default'] {
-    @apply !bg-neutral-900;
-    @apply !text-white;
+    @apply bg-neutral-900;
+    @apply text-white;
 }
 
 .tippy-box[data-theme~='default'][data-placement^='top'] > .tippy-arrow::before {
-    @apply !border-t-neutral-900
+    @apply border-t-neutral-900
 }
 .tippy-box[data-theme~='default'][data-placement^='bottom'] > .tippy-arrow::before {
-    @apply !border-b-neutral-900
+    @apply border-b-neutral-900
 }
 .tippy-box[data-theme~='default'][data-placement^='left'] > .tippy-arrow::before {
-    @apply !border-l-neutral-900
+    @apply border-l-neutral-900
 }
 .tippy-box[data-theme~='default'][data-placement^='right'] > .tippy-arrow::before {
-    @apply !border-r-neutral-900
+    @apply border-r-neutral-900
 }
 
 @keyframes glowing {
